--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -178,10 +178,22 @@ jobs:
           echo "sha256_macos_arm64=$(awk '{print $1}' zuxi-${VERSION}-macos-arm64.tar.gz.sha256)" >> "$GITHUB_OUTPUT"
           echo "sha256_macos_amd64=$(awk '{print $1}' zuxi-${VERSION}-macos-amd64.tar.gz.sha256)" >> "$GITHUB_OUTPUT"
 
+      - uses: actions/checkout@v4
+
+      - name: Extract tag annotation
+        id: tag_notes
+        run: |
+          NOTES=$(git tag -l --format='%(contents)' "${GITHUB_REF_NAME}")
+          {
+            echo "body<<EOFNOTES"
+            echo "$NOTES"
+            echo "EOFNOTES"
+          } >> "$GITHUB_OUTPUT"
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          generate_release_notes: true
+          body: ${{ steps.tag_notes.outputs.body }}
           files: |
             zuxi-*.tar.gz
             zuxi-*.tar.gz.sha256
