--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -166,6 +166,20 @@ jobs:
         id: version
         run: echo "version=${GITHUB_REF_NAME#v}" >> "$GITHUB_OUTPUT"
 
+      - uses: actions/checkout@v4
+        with:
+          path: repo
+
+      - name: Extract tag annotation
+        id: tag_notes
+        run: |
+          NOTES=$(git -C repo tag -l --format='%(contents)' "${GITHUB_REF_NAME}")
+          {
+            echo "body<<EOFNOTES"
+            echo "$NOTES"
+            echo "EOFNOTES"
+          } >> "$GITHUB_OUTPUT"
+
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
@@ -177,18 +191,6 @@ jobs:
           VERSION="${{ steps.version.outputs.version }}"
           echo "sha256_macos_arm64=$(awk '{print $1}' zuxi-${VERSION}-macos-arm64.tar.gz.sha256)" >> "$GITHUB_OUTPUT"
           echo "sha256_macos_amd64=$(awk '{print $1}' zuxi-${VERSION}-macos-amd64.tar.gz.sha256)" >> "$GITHUB_OUTPUT"
-
-      - uses: actions/checkout@v4
-
-      - name: Extract tag annotation
-        id: tag_notes
-        run: |
-          NOTES=$(git tag -l --format='%(contents)' "${GITHUB_REF_NAME}")
-          {
-            echo "body<<EOFNOTES"
-            echo "$NOTES"
-            echo "EOFNOTES"
-          } >> "$GITHUB_OUTPUT"
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
