--- a/deploy/site/docker-compose.yml
+++ b/deploy/site/docker-compose.yml
@@ -7,3 +7,8 @@ services:
       - "3847:80"
     labels:
       - "com.centurylinklabs.watchtower.enable=false"
+      - "reproxy.server=zuxi.mpanin.me"
+      - "reproxy.route=^/(.*)"
+      - "reproxy.dest=/$1"
+      - "reproxy.port=80"
+      - "reproxy.keep-host=true"
